# example-rust-slint

./: Cargo.toml  README.md
src/: main.rs
ui/: main.slint
