[package]
name = "example-rust-slint"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.15.1", default-features = false, features = ["renderer-software", "backend-winit", "compat-1-0"] }

[build-dependencies]
slint-build = "1.15.1"

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"